...
                            NavigationTooltip("查看持股總覽") {
                                IconButton(onClick = {
                                    navigateToTopLevel(navController, Screen.Holdings.route)
                                }) {
                                    Icon(
                                        painter = painterResource(R.drawable.ic_nav_holdings),
                                        contentDescription = "持股總覽",
                                        modifier = Modifier.size(30.dp),
                                        tint = if (currentDestination?.hierarchy?.any { it.route == Screen.Holdings.route } == true) {
                                            MaterialTheme.colorScheme.primary
                                        } else {
                                            MaterialTheme.colorScheme.onSurface
                                        }
...
